[#PE-730] Search endpoint fixes and new Count endpoint (#10)
