# apps/search-func/openapi/index.yaml
@@ -33,6 +33,22 @@ paths:
           schema:
             $ref: "#/definitions/ProblemJson" 
 
+  /count:
+    get:
+      operationId: count
+      summary: Count merchants and discounts to search within
+      description: |
+        Count merchants and discountsto search within
+      responses:
+        "200":
+          description: Count of merchants/discounts
+          schema:
+            $ref: "#/definitions/CountResult"
+        "500":
+          description: Service unavailable.
+          schema:
+            $ref: "#/definitions/ProblemJson" 
+
   /search:
     post:
       operationId: search
@@ -292,6 +308,14 @@ definitions:
       - $ref: '#/definitions/PublishedProductCategoriesWithNewDiscountsCount'
       - $ref: '#/definitions/PublishedProductCategories'
 
+  CountResult:
+    type: object
+    required:
+      - count
+    properties:
+      count:
+        type: number
+
   SearchResult:
     type: object
     required:
@@ -450,7 +474,7 @@ definitions:
       token:
         type: string
         description: Text used for searching merchants/discounts by their name and description
-        minLength: 1
+        minLength: 3
       page:
         type: integer
         description: page of result
